# kms

./: .dockerignore  .env  .env.makefile  .gitignore  .gitmodules  .releaserc  .releaserc.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.enclave  Makefile  Makefile.toml  PR_DESCRIPTION.md  README.md  SECURITY.md  bisect-tfhe-fft.sh  build.rs  ci.dockerfile  coverage.sh  devspace.yaml  docker-compose-core-base.yml  docker-compose-core-centralized-custodian.yml  docker-compose-core-centralized.yml  docker-compose-core-threshold-6.yml  docker-compose-core-threshold-custodian.yml  docker-compose-core-threshold-entrypoint.sh  docker-compose-core-threshold.yml  docker-compose-jaeger.yml  docker-compose-kms-base-ghcr.yml  docker-compose-kms-base.yml  docker-compose-kms-centralized-ghcr.yml  docker-compose-kms-centralized.yml  docker-compose-kms-core.env  docker-compose-kms-faucet.yml  (+14 more)
backward-compatibility/: .gitattributes  ADDING_NEW_VERSIONS.md  Cargo.toml  Makefile  README.md
backward-compatibility/data/: distributed-decryption.ron  distributed_decryption.ron  events.ron  kms-grpc.ron  kms.ron  threshold-fhe.ron
backward-compatibility/generate-v0.11/: Cargo.toml  README.md
backward-compatibility/generate-v0.11.0/: Cargo.toml
backward-compatibility/generate-v0.11.0/src/: data_0_11.rs  generate.rs  lib.rs  main.rs
backward-compatibility/generate-v0.11.1/: Cargo.toml
backward-compatibility/generate-v0.11.1/src/: data_0_11.rs  generate.rs  main.rs
backward-compatibility/generate-v0.11/src/: data_0_11.rs  generate.rs  main.rs
backward-compatibility/generate-v0.12.2/: Cargo.toml
backward-compatibility/generate-v0.12.2/src/: data_0_12.rs  lib.rs  main.rs
backward-compatibility/generate-v0.13.0/: Cargo.toml
backward-compatibility/generate-v0.13.0/src/: data_0_13.rs  generate.rs  main.rs
backward-compatibility/generate-v0.13.1/: Cargo.toml
backward-compatibility/generate-v0.13.1/src/: data_0_13.rs  generate.rs  main.rs
backward-compatibility/generate-v0.13.10/: Cargo.toml
backward-compatibility/generate-v0.13.10/src/: data_0_13.rs  lib.rs  main.rs
backward-compatibility/generate-v0.13.20/: Cargo.toml
backward-compatibility/generate-v0.13.20/src/: data_0_13.rs  main.rs
backward-compatibility/generate-v0.14.0/: Cargo.toml
backward-compatibility/generate-v0.14.0/src/: data_0_14.rs  lib.rs  (+2 more)
backward-compatibility/generate-v0.15.0/: Cargo.toml
backward-compatibility/scripts/: check_duplicate_tfhe_versions.sh
backward-compatibility/src/: data_0_11.rs  data_0_9.rs  generate.rs  lib.rs  load.rs  main.rs  parameters.rs  tests.rs
bc2wrap/: Cargo.toml
bc2wrap/src/: lib.rs
blockchain/client/: Cargo.toml
blockchain/connector/: Cargo.toml
blockchain/cosmos-proto/: Cargo.toml  build.rs
blockchain/events/: Cargo.toml
blockchain/events-handler/: Cargo.toml
blockchain/gateway/: .gitignore  Cargo.toml  README.md  build.rs  notes.txt
blockchain/proofs/: Cargo.toml
blockchain/protocol/: Cargo.toml  Dockerfile  build.rs
blockchain/simulator/: .gitignore  Cargo.toml  README.md  ROADMAP.md  bind_k8_threshold.sh  bind_k8_threshold_staging.sh  example_input.json
common/: Cargo.toml
common/src/: lib.rs  retry.rs
conf-trace/: Cargo.toml  README.md
conf-trace/docs/: metrics.md
conf-trace/src/: conf.rs  grpc.rs  lib.rs  metrics.rs  metrics_names.rs  telemetry.rs
conf-trace/tests/: metrics_test.rs
coordinator/: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  build.rs
coordinator/config/: default_1.toml  default_2.toml  default_3.toml  default_4.toml  default_centralized.toml
coordinator/examples/: client_bin.rs
coordinator/parameters/: default_params.json
coordinator/proto/: connector.proto  ddec_core.proto  kms.proto
coordinator/src/: client.rs  client_bin.rs  consts.rs  file_handling.rs  gen-tls-certs.rs  gen.rs  lib.rs  server.rs  setup_rpc.rs  storage.rs
coordinator/tests/: integration_test.rs
core-client/: Cargo.toml  README.md  bind_k8_threshold.sh  generate_test_ciphertexts.sh
core-client/config/: client_local_centralized.toml  client_local_kind_centralized.toml  client_local_kind_threshold.toml  client_local_threshold.toml  client_local_threshold_alternative.toml  client_local_threshold_custodian_backup.toml
core-client/src/: backup.rs  bin.rs  crsgen.rs  decrypt.rs  keygen.rs  lib.rs  mpc_context.rs  mpc_epoch.rs  prss_init.rs  reshare.rs  s3_operations.rs
core-client/test-utils-cc/: Cargo.toml
core-client/tests/: README.md  integration_test.rs  integration_test_backup.rs  integration_test_isolated.rs  integration_tests.rs  kubernetes_test.rs  kubernetes_test_centralized.rs  kubernetes_test_centralized_isolated.rs  kubernetes_test_threshold.rs  kubernetes_test_threshold_context.rs  kubernetes_test_threshold_isolated.rs
core-client/tests-utils/: Cargo.toml
core/backup/: Cargo.toml
core/backward-compatibility/: Cargo.toml  Makefile  README.md
kms-connector/: Cargo.toml  README.md  build.rs  changelog.md  config.example.toml  config.toml
kms-connector/design_docs/: connector.md
kms-connector/emulation/: README.md  start-emulation.sh
kms-connector/gw_l2_sc_interfaces/: IHttpz.sol
kms-connector/proto/: decryption_v2.proto  kms.v1.proto
kms-connector/src/: error.rs  lib.rs
kms-connector/tests/: interface_compatibility.rs
observability/: Cargo.toml  README.md
observability/docs/: metrics.md
observability/grafana/: grafana.ini
observability/loki/: loki-config.yml
observability/otelcollector/: otelcol-config.yml
observability/prometheus/: prometheus-local-config.yaml
observability/src/: conf.rs  grpc.rs  lib.rs  metrics.rs  metrics_names.rs  sys_metrics.rs  telemetry.rs  test_config.rs
tfhe-fft-repro/: Cargo.toml  README.md
tfhe-fft-repro/cargo-timings-macos-baseline/: cargo-timing-20260602T081108481Z-da2b5cac83bf204b.html
tfhe-fft-repro/src/: lib.rs
utils/: Cargo.toml
utils/src/: file_handling.rs  lib.rs
vsocktun/: Cargo.toml  README.md
vsocktun/src/: main.rs  protocol.rs  sys.rs  tun.rs  vsock.rs
(+2290 files in other folders)
