[workspace]
resolver = "2"

members = [
    "bc2wrap",
    "core/grpc",
    "core/service",
    "core/threshold",
    "core-client",
    "observability",
    "tools/kms-health-check",
]

# The backward-compatibility module is excluded from the workspace in order to avoid dependency
# conflicts. This is related to the fact that it needs to import the different packages (kms,
# threshold-fhe) to test with specific versions when generating the data. However, the
# workspace already has these dependencies by nature, creating a name conflict like described in
# https://github.com/rust-lang/cargo/issues/12891
# Note that it's not possible to only generate the lock file using specific features as the resolver
# builds the graph as if all features are enabled:
# https://doc.rust-lang.org/cargo/reference/resolver.html#features
exclude = ["backward-compatibility"]

[workspace.package]
authors = ["Zama"]
publish = true
edition = "2021"
license = "BSD-3-Clause-Clear"
version = "0.11.0"

[workspace.dependencies]
# Internal Zama modules
backward-compatibility = { path = "./backward-compatibility" }
bc2wrap = { path = "./bc2wrap" }
kms = { path = "./core/service", default-features = false }
kms-grpc = { path = "./core/grpc", default-features = false }
observability = { path = "./observability" }
threshold-fhe = { path = "./core/threshold/", default-features = false }

# External dependencies (alphabetically sorted)
aes = "=0.8.4"
aes-gcm = { version = "=0.10.3", features = ["std"] }
aes-gcm-siv = "=0.11.1"
aes-prng = "=0.2.1"
alloy-dyn-abi = "=1.3.1"
alloy-primitives = "=1.3.1"
alloy-signer = "=1.0.30"
alloy-signer-local = "=1.0.30"
alloy-sol-types = "=1.3.1"
anyhow = "=1.0.98"
assert_cmd = "=2.0.17"
async-std = { version = "=1.13.1", features = ["attributes", "tokio1"] }
async-trait = "=0.1.88"
async_cell = "0.2.2"
attestation-doc-validation = { version = "=0.10.0" }
aws-config = { version = "=1.5.9" }
aws-nitro-enclaves-nsm-api = { version = "=0.4.0" }
aws-sdk-kms = { version = "=1.50.0" }
aws-sdk-s3 = { version = "=1.62.0" }
aws-smithy-runtime = { version = "=1.7.3", features = ["client", "connector-hyper-0-14-x"] }
aws-smithy-runtime-api = { version = "=1.7.3" }
aws-smithy-types = { version = "=1.2.9" }
axum = { version = "=0.8.4", features = ["tokio"] }
backoff = "=0.4.0"
base64 = "=0.22.1"
bincode = { version = "=2.0.1", features = ["serde"] }
bip39 = { version = "=2.2.0", features = ["alloc"] }
bytes = "=1.10.1"
cbc = { version = "=0.1.2", features = ["alloc"] }
cfg-if = "=1.0.3"
clap = { version = "=4.5.47", features = ["derive"] }
config = "=0.15.15"
const_format = "=0.2.34"
console_error_panic_hook = { version = "=0.1.7" }
criterion = { version = "=0.5.1", features = ["async_tokio"] }
crypto-bigint = { version = "=0.6.1", features = ["serde", "rand_core", "extra-sizes"] }
ctor = "=0.4.2"
dashmap = "=6.1.0"
derive_more = { version = "=2.0.1", features = ["display"] }
enum_dispatch = "0.3.13"
futures = "=0.3.31"
futures-util = "=0.3.31"
g2p = "=1.2.2"
getrandom = { version = "=0.2.15", features = ["js"] }
hex = "=0.4.3"
http = "=1.3.1"
http-legacy = { package = "http", version = "=0.2.12" }
hyper-rustls = { version = "=0.24.2" }
hyper-rustls-ring = { package = "hyper-rustls", version = "=0.27.7", default-features = false, features = ["http2", "ring"] }
itertools = "=0.14.0"
k256 = "=0.13.4"
lazy_static = "=1.5.0"
minijinja = { version = "=2.11.0", features = ["loader"] }
ml-kem = "=0.2.1"
mockall = "=0.13.1"
ndarray = { version = "=0.16.1", features = ["serde"] }
nom = "=8.0.0"
num-integer = "=0.1.46"
num-traits = "=0.2.19"
oid-registry = "=0.8.1"
opentelemetry = "=0.29.1"
opentelemetry-http = "=0.29.0"
opentelemetry-otlp = { version = "=0.29.0", features = ["tokio", "grpc-tonic"] }
opentelemetry-prometheus = "=0.29.1"
opentelemetry-semantic-conventions = "=0.29.0"
opentelemetry-stdout = { version = "=0.29.0", features = ["trace"] }
opentelemetry_sdk = { version = "=0.29.0", features = ["rt-tokio", "logs", "metrics"] }
ordermap = "=0.5.7"
paste = "=1.0"
peak_alloc = { version = "=0.2.1" }
pprof = { version = "=0.15.0", features = ["flamegraph", "criterion"] }
proc-macro2 = "1.0"
prometheus = { version = "=0.14.0", features = ["process"] }
proptest = "=1.6.0"
prost = "=0.13.5"
prost-build = "=0.13.5"
prost-types = "=0.13.5"
quote = "1.0"
rand = "=0.8.5"
rasn = "=0.20.2"
rasn-cms = "=0.20.2"
rayon = "=1.11.0"
rcgen = { version = "=0.14.0", default-features = false, features = ["aws_lc_rs", "crypto", "pem", "x509-parser"] }
redis = { version = "=0.29.5" }
reqwest = { version = "=0.12.22", default-features = false, features = ["json", "rustls-tls"] }
rsa = { version = "=0.9.8", features = ["sha2", "serde"] }
rstest = "=0.25.0"
schemars = "=0.8.22"
serde = { version = "1.0.223", features = ["derive", "rc"] }
serde-wasm-bindgen = { version = "=0.6.5" }
serde_json = "=1.0.145"
serial_test = "=3.2.0"
sha2 = "=0.10.9"
sha3 = "=0.10.8"
signature = "=2.2.0"
statrs = "=0.18.0"
strum = "=0.27.1"
strum_macros = "=0.27.1"
syn = { version = "2.0", features = ["full"] }
sysinfo = "0.36.1"
sysinfo-old = { package = "sysinfo", version = "=0.35.1" }
tempfile = "=3.20.0"
test-context = "=0.4.1"
tfhe = "=1.3.3"
tfhe-csprng = "=0.6.0"
tfhe-versionable = "=0.6.1"
tfhe-zk-pok = "=0.7.2"
thiserror = "=2.0.12"
tokio = { version = "=1.46.1", features = ["full"] }
tokio-rustls = { version = "=0.26.2", default-features = false, features = ["aws_lc_rs"] }
tokio-util = { version = "=0.7.15", features = ["rt"] }
tonic = "=0.13.1"
tonic-build = "=0.13.1"
tonic-health = "=0.13.1"
tonic-tls = "=0.3.0"
tower = "=0.5.2"
tower-http = "=0.6.6"
tracing = { version = "=0.1.41", features = ["log"] }
tracing-appender = "=0.2.3"
tracing-opentelemetry = "=0.30.0"
tracing-subscriber = { version = "=0.3.20", features = ["fmt", "std"] }
tracing-test = "=0.2.5"
trait-variant = "0.1.2"
typed-builder = "=0.21.0"
url = { version = "=2.5.4", features = ["serde"] }
uuid = { version = "=1.16.0", features = ["v4", "fast-rng"] }
validator = { version = "=0.20.0", features = ["derive"] }
wasm-bindgen = { version = "=0.2.100", features = ["serde-serialize"] }
webpki = { version = "=0.22.4", features = ["std"] }
x509-parser = { version = "=0.17.0", features = ["verify"] }
zeroize = { version = "=1.8.1", features = ["zeroize_derive"] }

[profile.wasm]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimization in Development mode.
opt-level = 1
# Ensure all possible speed ups on dev compilation on Macos is enabled
split-debuginfo = "unpacked"

[profile.test]
opt-level = 3

[profile.bench]
debug = true

# actual release profile
[profile.release]
# enforce LTO to fat, which makes compilation much more expensive (time and memory), but can improve runtime performance
lto = "fat"

# profile for testing and CI
[profile.release-lto-off]
# use release profile settings
inherits = "release"
# but set LTO to the default (off instead of fat)
lto = "off"

[patch.crates-io]
# MEDIUM RISK: Using fork instead of upstream - verify changes, consider upstreaming
rcgen = { git = 'https://github.com/mkmks/rcgen.git', branch = 'k256' }
